welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
while(!estSurBiscuit){avance();}
^Balin:3: error: ';' expected but 'else' found.
if(estSurBiscuit) {prendBiscuit();gauche();gauche();while(!estSurBiscuit){avance();}else{recule();poseBiscuit();gauche();gauche();}
                                                                                    ^