welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(!estSurBiscuit){avance();}
if(estSurBiscuit) {prendBiscuit();gauche();gauche();while(!estSurBiscuit){avance();}else{recule();poseBiscuit();gauche();gauche();}

